WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168494
REGRESSION(
r212439
): Web Inspector Toolbar / Window appears broken
https://bugs.webkit.org/show_bug.cgi?id=168494
Summary
REGRESSION(r212439): Web Inspector Toolbar / Window appears broken
Simon Fraser (smfr)
Reported
2017-02-16 21:12:17 PST
REGRESSION(
r212439
): Web Inspector Toolbar / Window appears broken
Attachments
Patch
(1.61 KB, patch)
2017-02-16 21:13 PST
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-02-16 21:13:17 PST
Created
attachment 301877
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-02-16 21:16:19 PST
https://trac.webkit.org/r212524
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug