REGRESSION(r212439): Web Inspector Toolbar / Window appears broken https://bugs.webkit.org/show_bug.cgi?id=168494

Reviewed by Joseph Pecoraro.

Missed one conversion from acceleratesDrawing to drawsAsynchronously, which
caused non-Whippet GrpahicsContext shadow drawing to happen unexpectedly.

* platform/graphics/ca/cocoa/WebTiledBackingLayer.mm:
(-[WebTiledBackingLayer drawsAsynchronously]):
(-[WebTiledBackingLayer acceleratesDrawing]): Deleted.

Canonical link: https://commits.webkit.org/185516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212524 268f45cc-cd09-0410-ab3c-d52691b4dbfc